--- a/code/public/stylesheets/default.css
+++ b/code/public/stylesheets/default.css
@@ -117,3 +117,24 @@ footer{
 font-size:90px;
 font-family: 'army_rust';
 }
+
+.table{
+	font-family: Arial, Helvetica, sans-serif;
+	border-collapse: collapse;
+	width: 100%;
+}
+
+.table td, .table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: black;
+  color: white;
+}
+
+.table tr{background-color: #f2f2f2;}
