--- a/code/public/stylesheets/eventLobby.css
+++ b/code/public/stylesheets/eventLobby.css
@@ -6,6 +6,7 @@
 
 #eventlobbynav{
 background-color:  #6b7f63;
+Overflow-y:scroll;
 }
 .lobbyGroup{
     background-color: #62523b;
@@ -13,6 +14,7 @@ background-color:  #6b7f63;
     width:20%;
     margin-right:1%;
     margin-left:1%;
+    
 }
 
 #eventlobbymain{
