--- a/code/public/stylesheets/map.css
+++ b/code/public/stylesheets/map.css
@@ -39,3 +39,13 @@ p {
     color: #222;
     background: #fff;
 }
+
+.mapboxgl-popup {
+    max-width: 200px;
+  }
+  
+  .mapboxgl-popup-content {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+  }
+  
