--- a/code/public/stylesheets/forms.css
+++ b/code/public/stylesheets/forms.css
@@ -1,4 +1,7 @@
 /* Button used to open the contact form - fixed at the bottom of the page */
+.body{
+  font-family: Arial, Helvetica, sans-serif;
+}
 .open-button {
   background-color: #555;
   color: white;
@@ -25,12 +28,32 @@
 /* Add styles to the form container */
 .form-container {
   display: block;
-  max-width: 300px;
+  
   padding: 10px;
-  top: -50px;
-  background-color: white;
-  z-index: 9;
+  left: 0;
+  top: 0;
+  
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  min-width: 100%; /* Full width */
+  height: 100%; /* Full height */
+}
 
+.form-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  margin-top:10vh;
+  padding: 0;
+  border: 1px solid #888;
+  width: 50vh;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s
 }
 
 /* Full-width input fields */
@@ -68,4 +91,29 @@
 /* Add some hover effects to buttons */
 .form-container .btn:hover, .open-button:hover {
   opacity: 1;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0} 
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+.close {
+  color: #62523b;
+  float: right;
+  font-size: 10vh;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
