--- a/code/public/stylesheets/default.css
+++ b/code/public/stylesheets/default.css
@@ -199,6 +199,18 @@ footer {
     justify-content: space-between;
 }
 
+@font-face {
+    font-family: 'army_rust';
+    src: url('fonts/army_rust-webfont..eot');
+    src: url('fonts/army_rust-webfont..eot?#iefix') format('embedded-opentype'),
+        url('fonts/army_rust-webfont.woff') format('woff'),
+        url('fonts/army_rust-webfont.ttf') format('truetype'),
+        url('fonts/army_rust-webfont.svg#army_rust') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
 .accept {
     color: #FFF;
     background: #44CC44;
@@ -239,4 +251,9 @@ span #plusimage {
 .tablediv {
     Overflow-y: auto;
     max-height: 50vh;
+}
+
+.addPlus{
+    margin-left:55px;
+    
 }
