--- a/code/public/stylesheets/index.css
+++ b/code/public/stylesheets/index.css
@@ -1,7 +1,29 @@
-html {
-    height: 100%;
-    background-color: #211e19;
-    color: white;
+
+
+@font-face {
+    font-family: 'prestige';
+    src: url('fonts/2ndfont/ch702000-webfont.eot');
+    src: url('fonts/2ndfont/ch702000-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/2ndfont/ch702000-webfont.woff2') format('woff2'),
+         url('fonts/2ndfont/ch702000-webfont.woff') format('woff'),
+         url('fonts/2ndfont/ch702000-webfont.ttf') format('truetype'),
+         url('fonts/2ndfont/ch702000-webfont.svg#chey_1_silmanuscriptlregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+.test {
+    height: auto;
+    max-width: 50%;
+}
+
+.testImg {
+    position: relative;
+    max-width: 98vh;
+    min-width:60vh;
+    z-index:-1;
+    
 }
 
 body {
@@ -13,31 +35,6 @@ body {
     padding: 0;
 }
 
-header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 10vh;
-    background-image: linear-gradient( #181818, black);
-    z-index: 1;
-    padding-right: 40px;
-}
-
-header span {
-    color: white;
-}
-
-header img {
-    height: 50px;
-}
-
-header #logoheader img {
-    height: 100%;
-}
 
 #indexVideo {
     overflow-y: hidden;
@@ -47,33 +44,60 @@ header #logoheader img {
 }
 
 .infoboxes {
-    height: 100%;
+    max-width: 100%;
     display: flex;
 }
 
 .blackinfobox {
     height: 100%;
-    width: 50%;
+    min-width: 50%;
     background-color: black;
 }
 
-.test {
-    height: 100%;
-    width: 50%;
-}
+
 
 main {
     color: white;
+    max-height: 110vh;
 }
 
 .blackinfobox {
+    z-index: -3;
     display: grid;
-    grid-template-areas: 'I I . . . .' 'H H H H H H' '. . . L L L' '. B B . . .';
+    grid-template-areas: 'I I . . . .' '. . . . . .' 'L L L . . .' '. B B . . .';
 }
 
 .iconblackbox {
+    font-family: 'prestige';
+    color:white;
     grid-area: I;
+    font-size: 13vh;
+    padding-top: 10vh;
+    letter-spacing: 0.5vh;
+    padding-left: 15vh;
 }
+
+.headerBlackbox{
+    font-family: 'prestige';
+    position: relative;
+    right:195vh;
+    top:25vh;
+    padding-left: 15vh;
+    font-size: 3vh;
+    z-index: 30;
+    min-width: 200vh;
+    max-height: 20vh;
+}
+
+.headerBlackbox >h2{
+
+    color: black;
+}
+
+mark{
+    background-color: white;
+}
+
 
 .iconblackbox img {
     padding-top: 10%;
@@ -81,13 +105,22 @@ main {
     width: 100%;
 }
 
-.headerblackbox {
-    padding-left: 10%;
-    grid-area: H;
-}
+
 
 .listblackbox {
     grid-area: L;
+    color:white;
+    font-family: 'prestige';
+    padding-left: 16vh;
+    padding-top: 14vh;
+    font-size: 1.7vh;
+}
+
+
+
+.listblackbox > p > span{
+    color:#827725;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .buttonblackbox {
@@ -95,6 +128,7 @@ main {
 }
 
 footer {
+    color:white;
     background-image: linear-gradient( black, #121212);
     margin: auto;
     padding: auto;
@@ -113,15 +147,76 @@ footer {
     font-style: normal;
 }
 
-#titleheader h1 {
-    margin: auto;
-    font-family: 'army_rust';
-   font-size: 7vh;
+
+
+
+
+#logoheader{
+    position: relative;
+    width: 60vh;
+    height:auto;
+    z-index: 1;
+    top: -92vh;
+    margin-left: 70vh;
+    cursor: pointer;
 }
 
-
-
-.testImg {
-    min-height: 100%;
-    text-align: left;
+header {
+    
+    display: flex;
+    background-color: #827725;
+    color: white;
+    padding-left: 30px;
+   
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 12vh;
+    z-index: 80;
+    padding-right: 40px;
 }
+
+.menu{
+    padding-left: 5vh;
+}
+
+.menu > a{
+    font-family: 'prestige';
+    color: white;
+    text-decoration: none;
+    padding-left: 7vh;
+    font-size: 2.9vh;
+    letter-spacing: 0.6vh;
+}
+
+.menu > a:hover{
+    color:black;
+}
+
+#userboxHeader {
+    display:flex;
+    flex-direction: column;
+    margin-right: 10vh;
+}
+
+#userNameheader{
+    text-align:center;
+    position: relative;
+    top:-1vh;
+}
+
+#userImage{
+    height:10vh;
+    width:auto;
+}
+
+.startButton{
+    height:30vh;
+    width:auto;
+    cursor:pointer;
+    z-index: 200;
+}
+
