--- a/code/public/stylesheets/default.css
+++ b/code/public/stylesheets/default.css
@@ -245,3 +245,63 @@ span #plusimage {
     
 }
 
+
+
+header {
+    
+    display: flex;
+    background-color: #353321;
+    color: white;
+    padding-left: 30px;
+   
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 18vh;
+    z-index: 80;
+    padding-right: 40px;
+}
+
+#userboxHeader {
+    display:flex;
+    flex-direction: column;
+    margin-right: 10vh;
+}
+
+#userNameheader{
+    text-align:center;
+    position: relative;
+    top:-1vh;
+}
+
+.menu{
+    padding-left: 5vh;
+}
+
+.menu > a{
+    font-family: 'prestige';
+    color: white;
+    text-decoration: none;
+    padding-left: 7vh;
+    font-size: 2.9vh;
+    letter-spacing: 0.6vh;
+}
+
+.menu > a:hover{
+    color: #827725;
+}
+
+#logoheader{
+    position: relative;
+    right:11%;
+    top:5%;
+    width: 30vh;
+    height:auto;
+    z-index: 1;
+    
+    margin-left: 1vh;
+    cursor: pointer;
+}
