--- a/code/public/stylesheets/default.css
+++ b/code/public/stylesheets/default.css
@@ -274,7 +274,8 @@ table{
     align-items: center;
     margin-left:57vh;
     overflow-x: hidden;
-    
+    overflow-y:scroll;
+    max-height: 20vh;
 }
 
 
