--- a/code/public/stylesheets/default.css
+++ b/code/public/stylesheets/default.css
@@ -1,9 +1,10 @@
+
+
 body {
     
-    height: 100%;
-   
+
     border: solid thick;
-    overflow: hidden;
+    
     margin: 0 !important;
     padding: 0 !important;
 }
@@ -12,6 +13,19 @@ main {
     background-color:#827725;
     overflow: hidden;
     height:100%;
+    
+}
+
+.mainContainer{
+    position: relative;
+    top:24vh;
+    align-items: center;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    flex-shrink: 0;
+    min-width: 50%;
+    min-height: 100%;
 }
 
 .navContainer {
@@ -192,14 +206,11 @@ span #plusimage {
     z-index: 0;
     margin-left: 85vh;
     text-decoration: underline;
+    font-weight: normal;
 
 
 }
 
-.tablediv {
-    Overflow-y: auto;
-    max-height: 50vh;
-}
 
 .addPlus{
     margin-left:55px;
@@ -271,15 +282,20 @@ header {
 table{
     position: relative;
     font-family: 'prestige';
-    align-items: center;
-    margin-left:57vh;
-    overflow-x: hidden;
-    overflow-y:scroll;
-    max-height: 20vh;
+    margin: 0 auto;
+    
+}
+table > thead{
+    display:block;
+}
+table > tbody{
+  display:block;
+  overflow:auto;
+  height:30vh;
+  
 }
 
-
-.table th {
+table >thead>tr>th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
@@ -292,7 +308,7 @@ table{
     padding-right: 10vh;
 }
 
-.table tr {
+table > tbody >tr {
     
     font-size: 2.5vh;
     text-align: center;
@@ -300,9 +316,46 @@ table{
     cursor: pointer;
 }
 
-.table tr:hover {
+table >tbody>tr>td{
+    padding-left:2.5vh;
+    padding-right: 2.5vh;
+}
+
+table >tbody>tr:hover {
     background-color: #353321;
 }
 
 tr:nth-child(even) {background: #DDDACC}
 tr:nth-child(odd) {background-color: #827725;}
+
+#userboxHeader:hover{
+    color:#827725;
+    cursor: pointer;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px#353321; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background:#353321; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #1c1a11; 
+  }
+
+  .tablediv{
+    position: relative;
+    top:-3vh;
+  }
