--- a/code/public/stylesheets/index.css
+++ b/code/public/stylesheets/index.css
@@ -13,20 +13,15 @@
 
 }
 
-.test {
-    height: auto;
-    max-width: 50%;
-}
+
 
 .testImg {
-    position: relative;
     max-width: 98vh;
-    min-width:60vh;
     z-index:0;
-    
 }
 
 body {
+    
     width: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -39,8 +34,8 @@ body {
 #indexVideo {
     overflow-y: hidden;
     background-color: black;
-    min-width: 200vh;
-    max-height: 100vh;
+    min-width: 100%;
+    
     
 }
 
@@ -53,7 +48,7 @@ body {
     height: 100%;
     min-width: 50%;
     background-color: black;
-    z-index: 0;
+    z-index: 1;
     display: grid;
     grid-template-areas: 'I I . . . .' '. . . . . .' 'L L L . . .' '. B B . . .';
     
@@ -135,12 +130,15 @@ mark{
 }
 
 footer {
+    font-family: 'prestige';
+    text-align: center;
     color:white;
-    background-image: linear-gradient( black, #121212);
+    background-color:#827725;
     margin: auto;
     padding: auto;
     width: 100%;
-    height: 10vh;
+    padding: 4vh;
+    
 }
 
 @font-face {
@@ -201,7 +199,7 @@ header {
 }
 
 .menu > a:hover{
-    color:black;
+    color:black !important;
 }
 
 #userboxHeader {
