--- a/code/public/stylesheets/forms.css
+++ b/code/public/stylesheets/forms.css
@@ -85,7 +85,7 @@
 
 /* Add a red background color to the cancel button */
 .form-container .cancel {
-  background-color: red;
+  background-color: #822e25;
 }
 
 /* Add some hover effects to buttons */
@@ -105,7 +105,7 @@
 }
 
 .close {
-  color: #62523b;
+  color: #822e25;
   float: right;
   font-size: 10vh;
   font-weight: bold;
