--- a/code/public/stylesheets/dropdown.css
+++ b/code/public/stylesheets/dropdown.css
@@ -15,8 +15,9 @@
 .dropdown-content {
   display: none;
   position: absolute;
+  left:-40vh;
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 50vh;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -26,6 +27,7 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  display:flex;
 }
 
 .dropdown-content a:hover {background-color: #f1f1f1}
