--- a/code/public/stylesheets/eventLobby.css
+++ b/code/public/stylesheets/eventLobby.css
@@ -23,12 +23,22 @@ main{
   height: 83.7vh;
 }
 .lobbyGroup{
-    
+    position:relative;
+   
     min-height: 40%;
     width:36vh;
     margin-right:1%;
     margin-left:1%;
     
+}
+
+table > tbody{
+  display:block;
+  overflow:auto;
+  overflow-x:hidden;
+  height:64vh;
+  
+  
 }
 
 #eventlobbymain{
@@ -159,4 +169,22 @@ table >tbody>tr>td{
   color:black;
   margin-left: 2vh;
   
+}
+
+#mapIcon{
+ height:10vh;
+ z-index:10;
+ position:absolute;
+ right:5vh;
+ bottom:5vh;
+ cursor: pointer;
+}
+
+#edit{
+  height:10vh;
+  z-index:10;
+ position:absolute;
+ right:5vh;
+ bottom:15vh;
+ cursor: pointer;
 }
