+Function to search for events and teams (updated)

--- a/code/public/stylesheets/default.css
+++ b/code/public/stylesheets/default.css
@@ -165,13 +165,13 @@ main {
 
 .accept {
     color: #FFF;
-    background: #44CC44;
+    background: #827725;
     padding: 15px 20px;
     border-radius: 50%;
 }
 
 .accept:hover {
-    background: #6FE76F;
+    background: #ad9f32;
 }
 
 .deny {
