--- a/code/public/stylesheets/team.css
+++ b/code/public/stylesheets/team.css
@@ -40,3 +40,19 @@
     padding: 0.2vh 1vh 0.2vh;
 }
 
+#choiceClose{
+    position:relative;
+    top: -12vh;
+}
+
+.aceptBox{
+    cursor:pointer;
+    max-width: 12%;
+    margin-left:45%;
+    text-align: center;
+    margin-bottom: 2vh;
+}
+
+#choiceTitle{
+    text-align: center;
+}
