--- a/code/public/stylesheets/dropdown.css
+++ b/code/public/stylesheets/dropdown.css
@@ -1,42 +1,44 @@
 .dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
 }
 
 .dropdown {
-  position: relative;
-  display: inline-block;
+    position: relative;
+    display: inline-block;
 }
 
 .dropdown-content {
-  display: none;
-  position: absolute;
-  left:-40vh;
-  background-color: #f9f9f9;
-  min-width: 50vh;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+    display: none;
+    position: absolute;
+    left: -40vh;
+    background-color: #f9f9f9;
+    min-width: 50vh;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
 .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  display:flex;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    display: flex;
+    justify-content: space-between;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-  display: block;
+.dropdown-content a:hover {
+    background-color: #f1f1f1
 }
 
-.dropdown:hover .dropbtn {
-  background-color: #3e8e41;
+.flex-notif-container {
+    display: none;
 }
 
+.dropdown-content a:hover .flex-notif-container {
+    display: block;
+}
