--- a/code/public/stylesheets/map.css
+++ b/code/public/stylesheets/map.css
@@ -1,6 +1,31 @@
+body{
+    grid-template-areas: 'h' 'm';
+    grid-template-rows: 30vh auto;
+}
+
+
+.mapboxgl-canvas{
+    height:100%;
+}
+
+
+#mapmap {
+    grid-area: m;
+    position: absolute;
+    top: 18vh;
+    bottom: 0;
+    width:100%;
+    max-height: 100vh;
+}
+
 main {
+    
     margin: 0;
     padding: 0;
+}
+
+header{
+    grid-area: h;
 }
 
 .marker {
@@ -12,12 +37,6 @@ main {
     cursor: pointer;
 }
 
-#map {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-}
 
 .calculation-box {
     height: 75px;
